header footer changes

--- a/src/app/action/action.component.html
+++ b/src/app/action/action.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="action-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<br/><div class="modal fade" id="action-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="actionmodal-container">
       <h1>Add Meeting Actions</h1><br>
@@ -94,4 +94,5 @@
     </div>
   </div>
 </div>
+<br/>
 <router-outlet></router-outlet>
