--- a/src/app/discussion/discussion.component.html
+++ b/src/app/discussion/discussion.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="disc-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<br/><div class="modal fade" id="disc-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="discmodal-container">
       <h1>Add Discussion Points</h1><br>
@@ -67,4 +67,5 @@
     </div>
   </div>
 </div>
+<br/>
 <router-outlet></router-outlet>
