--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,8 @@ footer{
 			border-bottom : 1px solid black;
 			border-left : 1px solid black;
 			border-right : 1px solid black;
+			border-top : 1px solid black;
+			text-align: center;
 		}
 		header{
 			height :70px;
