--- a/src/app/moreDetails/moreDetails.component.html
+++ b/src/app/moreDetails/moreDetails.component.html
@@ -1,8 +1,8 @@
 
 <div class="container">
 <div class="panel panel-primary tableForm">
-  <div class="panel-heading text-center"><label for="meetingId">Meeting Id : </label>
-  <span *ngFor="let meeting of moreDetailsList">{{meeting.meetingId}}</span>
+  <div class="panel-heading text-center"><label for="meetingId">Meeting : </label>
+  <span *ngFor="let meeting of moreDetailsList">{{meeting.meetingTitle}}</span>
   </div>
   <div class="panel-body">
     <!--Table-->
