--- a/src/app/discussion/discussion.component.css
+++ b/src/app/discussion/discussion.component.css
@@ -1,11 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto);
-
-/****** LOGIN MODAL ******/
-
 .discmodal-container {
   padding: 30px;
-  max-width: 400px;
-  width: 100% !important;
+  //max-width: 950px;
+  //width: 100% !important;
   background-color: #F7F7F7;
   margin: 0 auto;
   border-radius: 2px;
@@ -21,43 +18,34 @@
 }
 
 .discmodal-container input[type=submit] {
-  width: 100%;
+  width: 100px;
   display: block;
-  margin-bottom: 10px;
+  //margin-bottom: 10px;
   position: relative;
 }
 
+.addButton {
+  width: 100px;
+  border: 0px;
+  color: #fff;
+  text-shadow: 0 1px rgba(0, 0, 0, 0.1);
+  background-color: #4d90fe;
+  font-family: roboto;
+  font-size: 14px;
+}
+
 .discmodal-container input[type=text] {
-  height: 44px;
   font-size: 16px;
-  width: 100%;
-  margin-bottom: 10px;
   -webkit-appearance: none;
   background: #fff;
   border: 1px solid #d9d9d9;
   border-top: 1px solid #c0c0c0;
-  /* border-radius: 2px; */
   padding: 0 8px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
 
-.discmodal-container textarea[type=text] {
-  height: 80px;
-  font-size: 16px;
-  width: 100%;
-  margin-bottom: 10px;
-  -webkit-appearance: none;
-  background: #fff;
-  border: 1px solid #d9d9d9;
-  border-top: 1px solid #c0c0c0;
-  /* border-radius: 2px; */
-  padding: 0 8px;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-}
-
-.discmodal-container input[type=text]:hover, textarea[type=text]:hover {
+.discmodal-container input[type=text]:hover {
   border: 1px solid #b9b9b9;
   border-top: 1px solid #a0a0a0;
   -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -72,21 +60,16 @@
   font-weight: 700;
   height: 36px;
   padding: 0 8px;
-  /* border-radius: 3px; */
-  /* -webkit-user-select: none;
-  user-select: none; */
 }
 
 .discmodal-submit {
-  /* border: 1px solid #3079ed; */
   border: 0px;
   color: #fff;
   text-shadow: 0 1px rgba(0, 0, 0, 0.1);
   background-color: #4d90fe;
-  padding: 17px 0px;
+  //padding: 10px 0px;
   font-family: roboto;
   font-size: 14px;
-  /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
 }
 
 .discmodal-submit:hover {
@@ -94,20 +77,4 @@
   border: 0px;
   text-shadow: 0 1px rgba(0, 0, 0, 0.3);
   background-color: #357ae8;
-  /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
-}
-
-#discussionBy, #discussionType, #decisionBy {
-  width: 100%;
-  height: 44px;
-}
-
-ng-valid[required], .ng-valid.required {
-  border-left: 5px solid #42A948;
-  /* green */
-}
-
-.ng-invalid:not(form) {
-  border-left: 5px solid #a94442;
-  /* red */
 }
