--- a/src/app/meeting/meeting.component.css
+++ b/src/app/meeting/meeting.component.css
@@ -1,5 +1,7 @@
 .Wrapper1{
-			border: 1px solid black;
+			border-top : 1px solid black;
+			border-left:  1px solid black;
+			border-right : 1px solid black;
 			margin : 0 auto;
 			background-color : #D7E9F4;
 			padding :10px;
