--- a/src/app/actionDiscussion/actionDiscussion.component.html
+++ b/src/app/actionDiscussion/actionDiscussion.component.html
@@ -5,7 +5,6 @@
     <div style="display:none;" id="loadDiv" class="animate-bottom">
     <div class="modal fade" id="myModal" role="dialog">
       <div class="modal-dialog">
-
         <!-- Discussion Modal content-->
         <div class="modal-content">
           <div class="modal-header">
@@ -19,12 +18,10 @@
             <button type="button" class="btn btn-default" data-dismiss="modal" (click)="removeNewChoice()">Yes</button>
           </div>
         </div>
-
       </div>
     </div>
     <div class="modal fade" id="myActionModal" role="dialog">
       <div class="modal-dialog">
-
         <!-- Action Modal content-->
         <div class="modal-content">
           <div class="modal-header">
@@ -38,7 +35,6 @@
             <button type="button" class="btn btn-default" data-dismiss="modal" (click)="removeNewRow()">Yes</button>
           </div>
         </div>
-
       </div>
     </div>
     <ul class="nav nav-tabs nav-justified">
@@ -81,7 +77,7 @@
                   <tr *ngFor="let model of models">
                     <div class="form-group">
                       <div class="row">
-                        <div class="col-md-2" style="padding-left:5px; padding-right:5px;">
+                        <div class="col-md-2">
                           <label for="discussionBy">Discussion By</label>
                           <select class="form-control" id="discussionBy" required [(ngModel)]="model.discussionBy" [ngModelOptions]="{standalone: true}" name="discussionBy" #discussionBy="ngModel">
                         <option *ngFor="let dec of userName" [value]="dec.id">{{dec.firstlast}}</option>
@@ -90,7 +86,7 @@
                             Discussion By is required
                           </div>
                         </div>
-                        <div class="col-md-1" style="padding-left:5px; padding-right:5px;">
+                        <div class="col-md-1">
                           <label for="discussionType">Type</label>
                           <select class="form-control" id="discussionType" required [(ngModel)]="model.discussionType" [ngModelOptions]="{standalone: true}" name="discussionType" #discussionType="ngModel">
                         <option *ngFor="let type of discussionTypes" [value]="type.id">{{type.discussionType}}</option>
@@ -99,14 +95,14 @@
                             Discussion Type is required
                           </div>
                         </div>
-                        <div class="col-md-3" style="padding-left:5px; padding-right:5px;">
+                        <div class="col-md-3">
                           <label for="discussion">Discussion</label>
                           <textarea type="text" class="form-control" id="discussion" required [(ngModel)]="model.discussion" [ngModelOptions]="{standalone: true}" name="discussion" #discussion="ngModel" placeholder="Discussion Points"></textarea>
                           <div [hidden]="discussion.valid || discussion.pristine" style="color:red;">
                             Discussion is required
                           </div>
                         </div>
-                        <div class="col-md-2" style="padding-left:5px; padding-right:5px;">
+                        <div class="col-md-2">
                           <label for="decisionBy">Decision By</label>
                           <select class="form-control" id="decisionBy" required [(ngModel)]="model.decisionBy" [ngModelOptions]="{standalone: true}" name="decisionBy" #decisionBy="ngModel">
                         <option *ngFor="let dec of userName" [value]="dec.id">{{dec.firstlast}}</option>
@@ -115,14 +111,14 @@
                             DecisionBy is required
                           </div>
                         </div>
-                        <div class="col-md-3" style="padding-left:5px; padding-right:5px;">
+                        <div class="col-md-3">
                           <label for="decision">Decision</label>
                           <textarea type="text" class="form-control" id="decision" required [(ngModel)]="model.decision" [ngModelOptions]="{standalone: true}" name="decision" #decision="ngModel" placeholder="Decision Taken"></textarea>
                           <div [hidden]="decision.valid || decision.pristine" style="color:red;">
                             Decision is required
                           </div>
                         </div>
-                        <div class="col-md-1" style="padding-left:5px; padding-right:5px;">
+                        <div class="col-md-1">
                           <label>Delete Row</label>
                           <input type="checkbox" value="{{model.id}}">
                         </div>
