--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,21 @@
 <header>
-  <img style="float:left;" src="./app/images/logo.png">
+  <img style="float:left;" src="./app/images/Cybage_Logo.png">
   <div>
     <h1>DOMO MEETING</h1>
   </div>
 </header>
+<section>
+  <span id="errorId"></span>
+  <div id="displayDetails" *ngIf="userDetails.firstName">
+    <button type="button" class="btn btn-danger btn-md logoutBtn" (click)="onLogout()">
+        <span class="glyphicon glyphicon-off" aria-hidden="true" data-toggle="tooltip" title="Logout"></span>
+    </button>
+    <div class="menu">
+      <img src="./app/images/login.jpg">
+      <span id="usernameDisplay"><b>Welcome {{userDetails.firstName}} {{userDetails.lastName}}</b></span>
+    </div>
+  </div>
+</section>
+
 <router-outlet></router-outlet>
-<footer class="col-lg-10 col-lg-offset-3 text-center"><span style="font-family:Tahoma;color:Gray;">&#169; Cybage Software Pvt.Ltd.</span></footer>
+<footer class="col-lg-10 col-lg-offset-3 text-center" id="footerDisp"><span style="font-family:Tahoma;color:Gray;">&#169; Cybage Software Pvt.Ltd.</span></footer>
