--- a/src/app/meeting/meeting.component.css
+++ b/src/app/meeting/meeting.component.css
@@ -1,37 +1,56 @@
-.Wrapper1{
-			border-top : 1px solid black;
-			border-left:  1px solid black;
-			border-right : 1px solid black;
-			margin : 0 auto;
-			background-color : #D7E9F4;
-			padding :10px;
-		}
-		footer{
-			border-bottom : 1px solid black;
-			border-left : 1px solid black;
-			border-right : 1px solid black;
-		}
-		header{
-			height :70px;
-			border : 1px solid black;
+.Wrapper1 {
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  margin: 0 auto;
+  background-color: #D7E9F4;
+  padding: 10px;
+}
 
-		}
-		img{
+footer {
+  border-bottom: 1px solid black;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+}
 
-			height : 68px;
+header {
+  height: 70px;
+  border: 1px solid black;
+}
 
-		}
-		.links{
-				width : 100%;
-				height : 30px;
-				border-left : 1px solid black;
-			border-right : 1px solid black;
-		}
-		.menu>img{
-			height : 30px;
-			width : 30px;
+img {
+  height: 68px;
+}
 
-		}
-		.menu{
-			float:right;
-		}
+.links {
+  width: 100%;
+  height: 32px;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+}
+
+.menu>img {
+  height: 30px;
+  width: 30px;
+}
+
+.menu {
+  float: right;
+}
+
+.hideoption {
+  display: none;
+  visibility: hidden;
+  height: 0;
+  font-size: 0;
+}
+.success{
+  color : green;
+  font-size: 17px;
+  display: none;
+}
+.error{
+  color : red;
+  font-size: 17px;
+  display: none;
+}
