--- a/src/app/meeting/meeting.component.html
+++ b/src/app/meeting/meeting.component.html
@@ -1,70 +1,83 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="checkbox.js"></script>
 </head>
 <router-outlet>
 <body class="wrapper">
 
 
-  <div class="links">
+ <div class="links">
     <ol style="float:left;height:30px;" class="breadcrumb">
       <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
-      <li><a routerLink="/meetinglist" routerLinkActive="active">List</a></li>
-      <li class="active">Add Meeting</li>
+      <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
+      <li><a routerLink="/meetingList" routerLinkActive="active">List</a></li>
+      <li class="active">Add New Meeting</li>
     </ol>
-    <div class="menu"><span>Welcome User</span>
+    <!--<div class="menu"><span>Welcome User</span>
       <img src="./app/images/login.jpg">
-    </div>
+    </div>-->
   </div>
 
   <div class="Wrapper1">
-    <form (ngSubmit)="onSubmit(meeting)" name="userForm" #meetingForm="ngForm">
+    <form (ngSubmit)="onSubmit(meetings)" name="userForm" #meetingForm="ngForm">
       <h3>CREATE A NEW MEETING</h3>
-
-    <!--  <div class="form-group row">
+      <span id="createsuccess" class="success">Meeting Created Successfully!!</span>
+      <span id="editsuccess" class="success">Meeting Modified Successfully!!</span>
+      <span id="error" class="error">Please Enter Valid Details to continue.</span>
+    <div [hidden]="edit_view" class="form-group row">
         <label for="example-text-input" class="col-md-2 col-form-label">Meeting Id* :</label>
           <div class="col-md-4">
-            <input class="form-control" name="meeting_id" type="text" placeholder="Enter the Meeting Id" id="example-text-input" required [(ngModel)]="meeting.meeting_id" #id="ngModel">
+            <input disabled="disabled" class="form-control" name="meeting_id" type="text" placeholder="Enter the Meeting Id" id="example-text-input" required [(ngModel)]="meetings.meetingId" #id="ngModel">
             <div [hidden]="id.valid || id.pristine" class="alert alert-danger">Meeting ID is required</div>
           </div>
-      </div> -->
+      </div>
       <div class="form-group row">
         <label for="example-text-input" class="col-md-2 col-form-label">Meeting Status* :</label>
           <div class="radio col-md-4">
             <label>
-					          <input #open name="status" type="radio" value="1" (click)="meeting.meeting_status = open.value" checked/>
+					          <input #open name="radio" type="radio" value="1" (click)="meetings.meetingStatus = open.value" [checked]="edit_view"/>
 					              Open
 				    </label>
             <label>
-			             <input #closed name="status" type="radio" value="2" (click)="meeting.meeting_status = closed.value" />
+			             <input #closed name="radio" type="radio" value="2" [disabled]="edit_view" (click)="meetings.meetingStatus = closed.value" />
 				               Closed
 			      </label>
           </div>
 
         <label for="example-text-input" class="col-md-2 col-form-label">Meeting Type* :</label>
-          <div class="col-md-4">
-            <select class="form-control" required [(ngModel)]="meeting.meeting_type" name="type">
-              <option *ngFor="let type of types" [value]="type.id" [selected]="type.meetingType == 'Sprint Meet'">{{type.meetingType}}</option>
+          <div id="checkboxSelectCombo" class="col-md-4">
+            <select class="form-control" required [(ngModel)]="meetings.meetingType" name="type">
+              <option value="" disabled="disabled" selected="selected">Please select a Meeting Type</option>
+              <option *ngFor="let type of types" [value]="type.id">{{type.meetingType}}</option>
 						</select>
             </div>
       </div>
       <div class="form-group row">
           <label for="example-text-input" class="col-md-2 col-form-label">Meeting Title* :</label>
             <div class="col-md-4">
-                <input class="form-control" name="title" type="text" placeholder="Enter the Meeting Title" id="example-text-input"  required [(ngModel)]="meeting.meeting_title" #title="ngModel">
+                <input class="form-control" name="title" type="text" placeholder="Enter the Meeting Title" id="example-text-input"  required [(ngModel)]="meetings.meetingTitle" #title="ngModel">
                   <div [hidden]="title.valid || title.pristine" class="alert alert-danger">Meeting title is required</div>
+
             </div>
+
 
           <label for="example-text-input" class="col-md-2 col-form-label">Meeting Purpose* :</label>
               <div class="col-md-4">
-                  <input class="form-control" name="purpose" type="text" placeholder="Enter the Meeting Purpose" id="example-text-input"  required [(ngModel)]="meeting.meeting_purpose" #purpose="ngModel">
+                  <input class="form-control" name="purpose" type="text" placeholder="Enter the Meeting Purpose" id="example-text-input"  required [(ngModel)]="meetings.meetingPurpose" #purpose="ngModel">
                     <div [hidden]="purpose.valid || purpose.pristine" class="alert alert-danger">Meeting purpose is required</div>
               </div>
       </div>
       <div class="form-group row">
           <label for="example-text-input" class="col-md-2 col-form-label">Facilitator* :</label>
               <div class="col-md-4">
-                  <select class="form-control" name="facilitator" [(ngModel)]="meeting.meeting_facilitator" required>
+                  <select class="form-control" name="facilitator" [(ngModel)]="meetings.meetingFacilitator" required>
+                      <option value="" disabled="disabled" selected="selected">Please select a Facilitator</option>
                       <option *ngFor="let fac of facilitator" [value]="fac.id">{{fac.firstlast}}</option>
 						      </select>
               </div>
@@ -72,7 +85,8 @@
 
               <label for="example-text-input" class="col-md-2 col-form-label">Recorder* :</label>
                   <div class="col-md-4">
-                      <select class="form-control" name="recorder" [(ngModel)]="meeting.meeting_recorder" required>
+                      <select class="form-control" name="recorder" [(ngModel)]="meetings.meetingRecorder" required>
+                           <option value="" disabled="disabled" selected="selected">Please select a Recorder</option>
                           <option *ngFor="let rec of recorder" [value]="rec.id">{{rec.firstlast}}</option>
     						      </select>
                   </div>
@@ -85,71 +99,71 @@
       <div class="form-group row">
           <label for="example-number-input" class="col-md-2 col-form-label">Venue* :</label>
             <div class="col-md-4">
-                <input class="form-control" type="text" placeholder="Enter Venue" id="example-number-input" name="venue" required [(ngModel)]="meeting.meeting_venue" #venue="ngModel">
+                <input class="form-control" type="text" placeholder="Enter Venue" id="example-number-input" name="venue" required [(ngModel)]="meetings.meetingVenue" #venue="ngModel">
                   <div [hidden]="venue.valid || venue.pristine" class="alert alert-danger">Meeting Venue is required</div>
             </div>
 
           <label for="example-email-input" class="col-md-2 col-form-label">Date* :</label>
               <div class="col-md-4">
+
                 <!--<input class="form-control" type="date" required [(ngModel)]="myDate" name="date" ng2-datetime-picker date-only="true" />-->
-                  <input class="form-control" type="date" required [(ngModel)]="meeting.meeting_date" name="date" #date="ngModel">
+                  <input  id="datepicker" class="form-control" type="date" required [(ngModel)]="meetings.meetingDate" name="date" #date="ngModel" value="meetings.meetingDate"><!--<span><input type="date"></span>-->
+
                     <div [hidden]="date.valid || date.pristine" class="alert alert-danger">Meeting Date is required</div>
               </div>
       </div>
       <div class="form-group row">
           <label for="example-text-input" class="col-md-2 col-form-label">Start Time* :</label>
               <div class="col-md-4">
-                  <input class="form-control" type="text" name="st" placeholder="Enter Start Time" required [(ngModel)]="meeting.meeting_starttime" #st="ngModel">
-                    <div [hidden]="st.valid || st.pristine" class="alert alert-danger">Meeting Start Time is required</div>
+                  <input class="form-control" type="text" name="st" placeholder="Enter Start Time" required [(ngModel)]="meetings.startTime" #st="ngModel" pattern="^(1?[0-9]|2[0-3]):[0-5][0-9]$">
+                    <div [hidden]="st.valid || st.pristine" class="alert alert-danger">Meeting Start Time is required & must be valid.</div>
+
               </div>
+
               <label for="example-url-input" class="col-md-2 col-form-label">End Time* : </label>
                   <div class="col-md-4">
-                      <input class="form-control" name="et" type="text" placeholder="Enter End Time" required [(ngModel)]="meeting.meeting_endtime" #et="ngModel">
-                        <div [hidden]="et.valid || et.pristine" class="alert alert-danger">Meeting End Time is required</div>
+                      <input class="form-control" name="et" type="text" placeholder="Enter End Time" required [(ngModel)]="meetings.endTime" #et="ngModel" pattern="^(1?[0-9]|2[0-3]):[0-5][0-9]$">
+                        <div [hidden]="et.valid || et.pristine" class="alert alert-danger">Meeting End Time is required & must be valid.</div>
                   </div>
       </div>
       <div class="form-group row">
           <label for="example-url-input" class="col-md-2 col-form-label">Agenda :</label>
               <div class="col-md-4">
-                  <textarea class="form-control" name="agenda" rows="5" [(ngModel)]="meeting.meeting_agenda" #name="ngModel"></textarea>
+                  <textarea class="form-control" name="agenda" rows="5" [(ngModel)]="meetings.meetingAgenda" #name="ngModel"></textarea>
               </div>
 
           <label for="example-url-input" class="col-md-2 col-form-label">Attendees* :</label>
               <div class="col-md-4" >
+
                 <div *ngFor="let option of options">
-        <label>
-            <input  type="checkbox" name="option" [attr.name]="options"  [value]="option.firstlast" (change)="updateChecked(option.firstlast, $event)" >{{option.firstlast}}
-        </label>
-      </div>
-                <!--  <input #SN type="checkbox" id="inlineCheckbox1" value="SandeepNabar" (change)="SandeepNabar = SN.checked"> Sandeep Nabar
-                  <input #VJ type="checkbox" id="inlineCheckbox2" value="VikasJadhav" (change)="VikasJadhav = VJ.checked"> Vikas Jadhav
-              </div>
-              <div class="col-md-4">
-                  <input #SS type="checkbox" id="inlineCheckbox3" value="SajuSasidharan" (change)="SajuSasidharan = SS.checked"> Saju Sasidharan
-                  <input #PK type="checkbox" id="inlineCheckbox4" value="PravinKatta" (change)="PravinKatta = PK.checked"> Pravin Katta
-              </div>
-          <label class="col-md-2"></label>
-              <div class="col-md-4">
-                  <input #RD type="checkbox" id="inlineCheckbox5" value="RavikumarDandhaniya" (change)="RavikumarDandhaniya = RD.checked"> Ravikumar Dandhaniya
-                  <input #DA type="checkbox" id="inlineCheckbox6" value="DurgeshAhire" (change)="DurgeshAhire = DA.checked"> Durgesh Ahire
-              </div>
-        <label class="col-md-2"></label>
-            <div class="col-md-4">
-                <input #PS type="checkbox" id="inlineCheckbox7" value="PranavKishore" (change)="PranavKishore = PS.checked">Pranav Kishore
-                <input #SG type="checkbox" id="inlineCheckbox8" value="SagarGaikwad" (change)="SagarGaikwad = SG.checked"> Sagar Gaikwad
-            </div>
-        <label class="col-md-2"></label>
-            <div class="col-md-4">
-                <input #AW type="checkbox" id="inlineCheckbox9" value=" AnjaliWalke" (change)="AnjaliWalke = AW.checked"> Anjali Walke
-                <input #RR type="checkbox" id="inlineCheckbox10" value="RupeshRamteke" (change)="RupeshRamteke = RR.checked"> Rupesh Ramteke
-            </div>-->
+
+                  <input  [attr.id]="option.id"   type="checkbox" name="option" [attr.name]="options"  [value]="option.id" (change)="updateChecked(option.id, $event)" >{{option.firstlast}}
+
+                </div>
+
+
+
+
     </div>
   </div>
+
+
     <div class="form-group row">
         <div class="col-lg-10 col-lg-offset-3 text-center">
-          <button type="submit" class="btn btn-primary" [disabled]="!meetingForm.form.valid">Submit</button>
-          <button type="reset" class="btn btn-warning">Reset</button>
-          <button class="btn btn-danger">Cancel</button>
+          <button type="submit" class="btn btn-primary"  [disabled]="!edit_view">Submit
+                <span class="glyphicon glyphicon-ok" aria-hidden="true" data-toggle="tooltip" title="Submit"></span>
+          </button>
+          <button type="reset" class="btn btn-warning btn-md addButton" (click)="reset()" >
+                  Reset  <span class="glyphicon glyphicon-refresh" aria-hidden="true" data-toggle="tooltip" title="Reset"></span>
+          </button>
+          <!--<button type="reset" class="btn btn-warning">Reset</button>-->
+          <button type="button" class="btn btn-danger btn-md addButton" routerLink="/meetingList" routerLinkActive="active" >
+            Cancel        <span class="glyphicon glyphicon-remove" aria-hidden="true" data-toggle="tooltip" title="Go Back to List"></span>
+          </button>
+          <button type="button" class="btn btn-warning btn-md addButton" [disabled]="edit_view" (click)="edit(meetings)">
+                  Edit  <span class="glyphicon glyphicon-edit" aria-hidden="true" data-toggle="tooltip" title="Update"></span>
+          </button>
+
         </div>
       </div>
     </form>
