--- a/src/app/meetingList/meetingList.component.css
+++ b/src/app/meetingList/meetingList.component.css
@@ -24,3 +24,15 @@ footer {
   background-color: #F7F7F7;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
+.toDelete {
+  float: right;
+  font-size: 20px;
+}
+.btn-default {
+  font-size: 15px;
+}
+input[type="checkbox"]{
+transform: scale(2);
+margin: 15px 15px;
+  float: right;
+}
