action discussion form changes for created by and date and minor changes in update querries

--- a/src/app/actionDiscussion/actionDiscussion.component.css
+++ b/src/app/actionDiscussion/actionDiscussion.component.css
@@ -89,18 +89,6 @@
   background-color: #357ae8;
 }
 
-
-/*#buttons ul {
-  list-style: none;
-  position: relative;
-  left: 35%;
-}
-
-#buttons li {
-  float: left;
-  position: relative;
-}*/
-
 .container {
   width: 100%;
 }
@@ -173,7 +161,7 @@
   }
 }
 
-#myDiv {
+#loadDiv {
   display: none;
   text-align: center;
 }
