--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -42,3 +42,13 @@ img {
   margin: 15px 20px;
   color: red;
 }
+
+.links {
+  width: 100%;
+  height: 32px;
+}
+
+.breadLinks {
+  float: left;
+  height: 30px;
+}
