--- a/src/app/meeting/meeting.component.css
+++ b/src/app/meeting/meeting.component.css
@@ -24,9 +24,9 @@ img {
 .links {
   width: 100%;
   height: 32px;
-  border-left: 1px solid black;
+  /*border-left: 1px solid black;*/
   border-bottom: 1px solid black;
-  border-right: 1px solid black;
+  /*border-right: 1px solid black;*/
 }
 
 .menu>img {
